Fix label on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -573,9 +573,16 @@ body {
     max-width: 640px;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
     
+}
+
+@media only screen and (min-width: 600px) {
+    .challenge-page-container .header, .challenge-page-container .content {
+        padding-left: 40px;
+        padding-right: 40px;
+    }
 }
 
 .challenge-page-header {
@@ -586,21 +593,44 @@ body {
 
 .challenge-page-header {
     display: flex;
+    flex-direction: column;
+    align-items: start;
+}
+
+.challenge-page-header h1 {
+    margin-bottom: 0.5em;
 }
 
 .challenge-page-header .label {
     font-weight: bold;
     font-size: 14px;
-    display: flex;
-    align-items: center;
+
+    display: inline-block;
+
     background: linear-gradient(90deg, #27AB83, #199473);
     color: white;
-    padding: 0.5em 0.8em;
+    padding: 0.8em 0.8em;
     border-radius: 5px;
     line-height: 1;
-    margin-left: 0.5em;
     text-transform: uppercase;
 }
+
+@media only screen and (min-width: 600px) {
+    .challenge-page-header {
+        flex-direction: row;
+        align-items: stretch;
+    }
+
+    .challenge-page-header h1 {
+        margin-bottom: 0px;
+    }
+    .challenge-page-header .label {
+        margin-left: 0.5em;
+        display: flex;
+        align-items: center;
+    }
+}
+
 
 .challenge-stages {
     margin-top: 2em;
